Comienzo de modularizacion de clientes, script builder, poms, mapeo infractions y agencies para query1
Co-authored-by: PakiQuian <f.quianblanco@gmail.com>
Co-authored-by: tobi0412 <tveslosada@itba.edu.ar>